--- a/wecode.html
+++ b/wecode.html
@@ -9,7 +9,7 @@
     <h1>코딩의 우주에서 항해하기</h1>
        <nav>
               <ul class="nav-container">
-                   <li class="nav-item"><a href="welcome.html">HOME</a></li>
+                   <li class="nav-item"><a href="index.html">HOME</a></li>
                    <li class="nav-item"><a href="aboutme.html">ABOUT ME</a></li>
                    <li class="nav-item"><a href="wecode.html">WECODE</a></li>
                </ul> 
